--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "@types/multer": "^1.4.12",
+    "backend": "^0.0.0",
     "cloudinary": "^2.5.1",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -23,7 +25,8 @@
     "jwks-rsa": "^3.1.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
